@@ -7,7 +7,7 @@ shift
 
 GOTYADQT=$(which yadqt 2>/dev/null)
 if [[ $? -eq 0 ]];then
-	RESULT=$($GOTYADQT --type=colour)
+	RESULT=$($GOTYADQT --type=colour  -d "#ffffff")
 	if [[ $? -eq 1 ]];then
 		exit
 	fi
@@ -23,4 +23,5 @@ else
 	fi
 fi
 
-echo -n "<div style=\"color:${COLOUR};\">${@}</div>"
+echo -n "<span style=\"color:${COLOUR};\">${@}</span>"
+
