@@ -1,0 +1,5 @@
+#!/bin/bash
+
+DOCUMENT="$1"
+shift
+echo -n "<img src=\"${@}\" alt=\"${@}\" title=\"${@}\" height=\"100\" width=\"100\">"
